--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "license": "MIT",
+  "files": [
+  	"dist"
+  ],
   "scripts": {
     "dev": "node build.mjs --watch & tsc --watch",
     "build": "node build.mjs & tsc"
